--- a/Graphic Calculator/Base.lproj/Main.storyboard
+++ b/Graphic Calculator/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Calculator View Controller-->
+        <!--Calculator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CalculatorViewController" customModule="Graphic_Calculator" customModuleProvider="target" sceneMemberID="viewController">
@@ -374,7 +374,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="NlE-LR-QXI" secondAttribute="trailing" id="utL-Yo-ysm"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="yHP-88-7wM"/>
+                    <navigationItem key="navigationItem" title="Calculator" id="yHP-88-7wM"/>
                     <connections>
                         <outlet property="display" destination="tGf-Bp-xg7" id="jAL-sa-e0T"/>
                         <outlet property="displayDescription" destination="BFh-FK-NaU" id="D3l-ru-vKR"/>
@@ -384,7 +384,7 @@
             </objects>
             <point key="canvasLocation" x="442.39999999999998" y="-874.81259370314854"/>
         </scene>
-        <!--Graph View Controller-->
+        <!--Graph-->
         <scene sceneID="3qc-1i-7zb">
             <objects>
                 <viewController id="OA8-28-ImD" customClass="GraphViewController" customModule="Graphic_Calculator" customModuleProvider="target" sceneMemberID="viewController">
@@ -396,7 +396,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nbz-xy-6Kv" customClass="GraphView" customModule="Graphic_Calculator" customModuleProvider="target">
+                            <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Nbz-xy-6Kv" customClass="GraphView" customModule="Graphic_Calculator" customModuleProvider="target">
                                 <color key="backgroundColor" red="1" green="0.96182205990000003" blue="0.074127124399999994" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
@@ -408,7 +408,7 @@
                             <constraint firstAttribute="bottom" secondItem="Nbz-xy-6Kv" secondAttribute="bottom" constant="20" symbolic="YES" id="yTf-Lz-wM5"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Evz-35-Omt"/>
+                    <navigationItem key="navigationItem" title="Graph" id="Evz-35-Omt"/>
                     <connections>
                         <outlet property="CalculatorGraphView" destination="Nbz-xy-6Kv" id="fb1-gP-DTd"/>
                     </connections>
