--- a/Graphic Calculator/Base.lproj/Main.storyboard
+++ b/Graphic Calculator/Base.lproj/Main.storyboard
@@ -378,6 +378,7 @@
                     <connections>
                         <outlet property="display" destination="tGf-Bp-xg7" id="jAL-sa-e0T"/>
                         <outlet property="displayDescription" destination="BFh-FK-NaU" id="D3l-ru-vKR"/>
+                        <outlet property="graphButton" destination="mkN-OT-urG" id="1PB-Ba-JBd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -397,7 +398,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Nbz-xy-6Kv" customClass="GraphView" customModule="Graphic_Calculator" customModuleProvider="target">
-                                <color key="backgroundColor" red="1" green="0.96182205990000003" blue="0.074127124399999994" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
